Word Alignment Fix

--- a/index.css
+++ b/index.css
@@ -15,17 +15,17 @@
 .u-section-1 .u-text-1 {
   font-weight: 700;
   font-size: 4.5rem;
-  margin: -318px auto 0 8px;
+  margin: -313px auto 0 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.125rem;
-  margin: -3px 506px 0 14px;
+  margin: -8px 515px 0 5px;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
-  margin: 0 556px 60px 14px;
+  margin: 0 570px 60px 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -50,8 +50,6 @@
 
   .u-section-1 .u-text-3 {
     margin-top: 1px;
-    margin-right: 370px;
-    margin-left: 0;
   }
 }
 
@@ -76,7 +74,7 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-right: 150px;
+    margin-right: 350px;
   }
 }
 
